--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <h1>¿Llegas a la gasolinera?</h1>
     <p>Fuiste de acampada, pero no te fijaste en cuanta gasolina te queda, haces 25 kilometros por litro, ¿llegas a la gasolinera más proxima?</p>
     <form id="formulario">
-        <input type="number" id="gasolina" name="gasolina">
+        <input type="number" id="gasolina" name="gasolina" required>
         <label for="gasolina">Gasolina</label>
         <br>
-        <input type="number" id="gasolinera" name="gasolinera">
+        <input type="number" id="gpl" name="gpl" required>
+        <label for="gpl">Gasolina Por Litro</label>
+        <br>
+        <input type="number" id="gasolinera" name="gasolinera" required>
         <label for="gasolinera">Gasolinera más próxima</label>
         <br>
         <input type="submit" value="Comprobar">
